--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,8 +1,8 @@
 <!--<ion-header>-->
-  <!--<ion-toolbar text-center>-->
-    <!--<img src="img/logo.png" width="30px" height="30px" style="position: relative; top: 3px;"/>-->
-    <!--<span class="titleicon">&nbsp;思必拓股份</span>-->
-  <!--</ion-toolbar>-->
+<!--<ion-toolbar text-center>-->
+<!--<img src="img/logo.png" width="30px" height="30px" style="position: relative; top: 3px;"/>-->
+<!--<span class="titleicon">&nbsp;思必拓股份</span>-->
+<!--</ion-toolbar>-->
 <!--</ion-header>-->
 
 <ion-content no-padding class="home">
@@ -47,7 +47,11 @@
         </button>
       </ion-col>
       <ion-col width-33>
-        </ion-col>
+        <button background clear block class="text-on-bottom" (click)="nav2FaqPage()">
+          <ion-icon name="faq"></ion-icon>
+          常见问题
+        </button>
+      </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
