--- a/app/pages/tabs/tabs.html
+++ b/app/pages/tabs/tabs.html
@@ -2,6 +2,8 @@
   <ion-tab [root]="homeRoot" tabTitle="首页" tabIcon="home"></ion-tab>
   <ion-tab [root]="productRoot" tabTitle="产品介绍" tabIcon="smartphone"></ion-tab>
   <ion-tab [root]="enquiryRoot" tabTitle="询价" tabIcon="enquiry"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="在线客服" tabIcon="support"></ion-tab>
+  <ion-tab tabTitle="在线客服" tabIcon="support" (ionSelect)="close();"></ion-tab>
   <ion-tab [root]="personalRoot" tabTitle="我的" tabIcon="user"></ion-tab>
 </ion-tabs>
+
+
