--- a/app/pages/trade-sub/trade-sub.html
+++ b/app/pages/trade-sub/trade-sub.html
@@ -4,17 +4,14 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>{{title}}</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content no-padding>
   <ion-list>
+    <ion-list-header>
+      {{title}}
+    </ion-list-header>
     <button ion-item *ngFor="let sub of subs" (click)="nav2TradeDetailPage(sub)">{{sub.name}}</button>
   </ion-list>
+  <button fab fab-bottom fab-fixed fab-left background (click)="nav.pop()">
+    <ion-icon name="undo"></ion-icon>
+  </button>
 </ion-content>
