--- a/www/fontcustom/output/icons-preview.html
+++ b/www/fontcustom/output/icons-preview.html
@@ -141,11 +141,11 @@
 
       @font-face {
   font-family: "icons";
-  src: url("./icons_3d371fe296dfc80cfb1f8436ed20146b.eot");
-  src: url("./icons_3d371fe296dfc80cfb1f8436ed20146b.eot?#iefix") format("embedded-opentype"),
-       url("./icons_3d371fe296dfc80cfb1f8436ed20146b.woff") format("woff"),
-       url("./icons_3d371fe296dfc80cfb1f8436ed20146b.ttf") format("truetype"),
-       url("./icons_3d371fe296dfc80cfb1f8436ed20146b.svg#icons") format("svg");
+  src: url("./icons_d311da56e4c4af236d565898c085a63f.eot");
+  src: url("./icons_d311da56e4c4af236d565898c085a63f.eot?#iefix") format("embedded-opentype"),
+       url("./icons_d311da56e4c4af236d565898c085a63f.woff") format("woff"),
+       url("./icons_d311da56e4c4af236d565898c085a63f.ttf") format("truetype"),
+       url("./icons_d311da56e4c4af236d565898c085a63f.svg#icons") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -153,7 +153,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "icons";
-    src: url("./icons_3d371fe296dfc80cfb1f8436ed20146b.svg#icons") format("svg");
+    src: url("./icons_d311da56e4c4af236d565898c085a63f.svg#icons") format("svg");
   }
 }
 
@@ -175,6 +175,7 @@
 .ion-ios-enquiry:before,
 .ion-ios-enquiry-outline:before,
 .ion-ios-explosion:before,
+.ion-ios-faq:before,
 .ion-ios-fingerprint:before,
 .ion-ios-infrared:before,
 .ion-ios-kindle:before,
@@ -230,6 +231,7 @@
 .ion-ios-enquiry:before { content: "\f107"; }
 .ion-ios-enquiry-outline:before { content: "\f108"; }
 .ion-ios-explosion:before { content: "\f109"; }
+.ion-ios-faq:before { content: "\f12a"; }
 .ion-ios-fingerprint:before { content: "\f10a"; }
 .ion-ios-infrared:before { content: "\f10b"; }
 .ion-ios-kindle:before { content: "\f120"; }
@@ -271,7 +273,7 @@
   <body class="characters-off">
     <div id="page" class="container">
       <header>
-        <h1>icons contains 41 glyphs:</h1>
+        <h1>icons contains 42 glyphs:</h1>
         <a onclick="toggleCharacters(); return false;" href="#">Toggle Preview Characters</a>
       </header>
 
@@ -468,6 +470,19 @@
         <div class="usage">
           <input class="class" type="text" readonly="readonly" onClick="this.select();" value=".ion-ios-explosion" />
           <input class="point" type="text" readonly="readonly" onClick="this.select();" value="&amp;#xf109;" />
+        </div>
+      </div>
+      
+      <div class="glyph">
+        <div class="preview-glyphs">
+          <span class="step size-12"><span class="letters">Pp</span><i id="ion-ios-faq" class="ion-ios-faq"></i></span><span class="step size-14"><span class="letters">Pp</span><i id="ion-ios-faq" class="ion-ios-faq"></i></span><span class="step size-16"><span class="letters">Pp</span><i id="ion-ios-faq" class="ion-ios-faq"></i></span><span class="step size-18"><span class="letters">Pp</span><i id="ion-ios-faq" class="ion-ios-faq"></i></span><span class="step size-21"><span class="letters">Pp</span><i id="ion-ios-faq" class="ion-ios-faq"></i></span><span class="step size-24"><span class="letters">Pp</span><i id="ion-ios-faq" class="ion-ios-faq"></i></span><span class="step size-36"><span class="letters">Pp</span><i id="ion-ios-faq" class="ion-ios-faq"></i></span><span class="step size-48"><span class="letters">Pp</span><i id="ion-ios-faq" class="ion-ios-faq"></i></span><span class="step size-60"><span class="letters">Pp</span><i id="ion-ios-faq" class="ion-ios-faq"></i></span><span class="step size-72"><span class="letters">Pp</span><i id="ion-ios-faq" class="ion-ios-faq"></i></span>
+        </div>
+        <div class="preview-scale">
+          <span class="step">12</span><span class="step">14</span><span class="step">16</span><span class="step">18</span><span class="step">21</span><span class="step">24</span><span class="step">36</span><span class="step">48</span><span class="step">60</span><span class="step">72</span>
+        </div>
+        <div class="usage">
+          <input class="class" type="text" readonly="readonly" onClick="this.select();" value=".ion-ios-faq" />
+          <input class="point" type="text" readonly="readonly" onClick="this.select();" value="&amp;#xf12a;" />
         </div>
       </div>
       
