--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
   <link href="fontcustom/output/icons.css" rel="stylesheet">
 </head>
 <body>
-
+  <div id="loading">页面加载中，请稍后...</div>
   <!-- this Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
@@ -26,5 +26,6 @@
   <script src="build/js/zone.js"></script>
   <!-- the bundle which is built from the app's source code -->
   <script src="build/js/app.bundle.js"></script>
+  <script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
 </body>
 </html>
